# brightpanda

./: CMakeLists.txt  README.md
src/: main.c
src/core/: cache.c  cache.h  entity.c  entity.h  extractor.c  extractor.h  manifest.c  manifest.h  parser_pool.c  parser_pool.h  walker.c  walker.h
src/lang/: plugin.h  registry.c
src/lang/python/: plugin.c
src/lang/python/queries/: calls.scm  functions.scm  imports.scm  routes.scm
src/util/: logger.c  logger.h  path.c  path.h
